# STM32-libraries

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  CMakeLists.txt  LICENSE  Priorities.h  README.md  clang-format.sh  cmake-format.sh  versions.cmake
Devices/CurrentSense/: CMakeLists.txt  CurrentSense.cpp  CurrentSense.hpp
Devices/DeviceTemplate/: DeviceTemplate.cpp  DeviceTemplate.h
Devices/IMU/: IMU.cpp  IMU.h
Devices/LSPC/: CMakeLists.txt  LSPC.cpp  LSPC.hpp  MessageTypes.h  MessageTypes_Example.h  Packet.hpp  README  Serializable.hpp  SocketBase.hpp
Devices/Motor/: CMakeLists.txt  Motor.cpp  Motor.hpp
Devices/MotorDriver/: MotorDriver.cpp  MotorDriver.h
Devices/QuadratureKnob/: QuadratureKnob.cpp  QuadratureKnob.hpp
Drivers/ESCON/: ESCON.cpp  ESCON.h  ESCON.hpp
Drivers/INA219/: CMakeLists.txt  INA219.cpp  INA219.h  INA219.hpp
Drivers/LCD/: Adafruit_GFX.cpp  Adafruit_GFX.h  Adafruit_HX8357.cpp  Adafruit_HX8357.h  Adafruit_SPITFT.cpp  Adafruit_SPITFT.h  Adafruit_SPITFT_Macros.h  LCD.h  Print.cpp  Print.h  README.md  glcdfont.c
Drivers/MPU9250/: MPU9250.cpp  MPU9250.h  MPU9250.hpp  MPU9250_Bus.cpp  MPU9250_Bus.h  MPU9250_Bus.hpp  README.md
Drivers/MTI200/: MTI200.cpp  MTI200.h  (+10 more)
Misc/FirstOrderLPF/: CMakeLists.txt  FirstOrderLPF.cpp  FirstOrderLPF.h  FirstOrderLPF.hpp
Misc/MATLABCoderInit/: CMakeLists.txt  MATLABCoderInit.cpp  MATLABCoderInit.h  mw_cmsis.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
Misc/Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.h  Matrix.hpp  inv6x6.cpp  inv6x6.h
Misc/Matrix/Determinant/: det2x2.cpp  det2x2.h  det3x3.cpp  det3x3.h  det4x4.cpp  det4x4.h  det5x5.cpp  det5x5.h  det6x6.cpp  det6x6.h
Misc/Matrix/Inverse/: inv2x2.cpp  inv2x2.h  inv3x3.cpp  inv3x3.h  inv4x4.cpp  inv4x4.h  inv5x5.cpp  inv5x5.h  inv6x6.cpp  inv6x6.h
Misc/Matrix/SVD/: sqrt.cpp  sqrt.h  svd.cpp  svd.h  svd1.cpp  svd1.h  svd_types.h  xaxpy.cpp  xaxpy.h  xdotc.cpp  xdotc.h  xnrm2.cpp  xnrm2.h  xrot.cpp  xrot.h  xrotg.cpp  xrotg.h  xscal.cpp  xscal.h  xswap.cpp  xswap.h
Misc/Matrix/SVD/2x2/: svd_2x2.cpp  svd_2x2.h  svd_2x2_impl.cpp  svd_2x2_impl.h  xaxpy_2x2.cpp  xaxpy_2x2.h  xdotc_2x2.cpp  xdotc_2x2.h  xnrm2_2x2.cpp  xnrm2_2x2.h  xrot_2x2.cpp  xrot_2x2.h  xrotg_2x2.cpp  xrotg_2x2.h  xscal_2x2.cpp  xscal_2x2.h  xswap_2x2.cpp  xswap_2x2.h
Misc/Matrix/SVD/3x3/: svd_3x3.cpp  svd_3x3.h  svd_3x3_impl.cpp  svd_3x3_impl.h  xaxpy_3x3.cpp  xaxpy_3x3.h  xdotc_3x3.cpp  xdotc_3x3.h  xnrm2_3x3.cpp  xnrm2_3x3.h  xrot_3x3.cpp  xrot_3x3.h  xrotg_3x3.cpp  xrotg_3x3.h  xscal_3x3.cpp  xscal_3x3.h  xswap_3x3.cpp  xswap_3x3.h
Misc/Matrix/SVD/4x4/: svd_4x4.cpp  svd_4x4.h  svd_4x4_impl.cpp  svd_4x4_impl.h  xaxpy_4x4.cpp  xaxpy_4x4.h  xdotc_4x4.cpp  xdotc_4x4.h  xnrm2_4x4.cpp  xnrm2_4x4.h  xrot_4x4.cpp  xrot_4x4.h  xrotg_4x4.cpp  xrotg_4x4.h  xscal_4x4.cpp  xscal_4x4.h  xswap_4x4.cpp  xswap_4x4.h
Misc/Matrix/SVD/5x5/: svd_5x5.cpp  svd_5x5.h  svd_5x5_impl.cpp  svd_5x5_impl.h  xaxpy_5x5.cpp  xaxpy_5x5.h  xdotc_5x5.cpp  xdotc_5x5.h  xnrm2_5x5.cpp  xnrm2_5x5.h  xrot_5x5.cpp  xrot_5x5.h  xrotg_5x5.cpp  xrotg_5x5.h  xscal_5x5.cpp  xscal_5x5.h  xswap_5x5.cpp  xswap_5x5.h
Misc/Matrix/SVD/6x6/: svd_6x6.cpp  svd_6x6.h  svd_6x6_impl.cpp  svd_6x6_impl.h  xaxpy_6x6.cpp  xaxpy_6x6.h  xdotc_6x6.cpp  xdotc_6x6.h  xnrm2_6x6.cpp  xnrm2_6x6.h  xrot_6x6.cpp  xrot_6x6.h  xrotg_6x6.cpp  xrotg_6x6.h  xscal_6x6.cpp  xscal_6x6.h  xswap_6x6.cpp  xswap_6x6.h
Misc/NonlinearLeastSquares/: CMakeLists.txt  NonlinearLeastSquares.cpp  NonlinearLeastSquares.hpp  exp.cpp  exp.h  fitExponentialDecay2.cpp  fitExponentialDecay2.h  fitExponentialDecay2_emxAPI.cpp  fitExponentialDecay2_emxAPI.h  fitExponentialDecay2_emxutil.cpp  fitExponentialDecay2_emxutil.h  fitExponentialDecay2_types.h
Misc/QEKF/: CMakeLists.txt  QEKF.cpp  QEKF.hpp  README.md
Misc/QEKF/MATLABCoder/: QEKF_coder.cpp  QEKF_coder.h  QEKF_initialize.cpp  QEKF_initialize.h  QEKF_types.h  eye.cpp  eye.h  mrdivide.cpp  mrdivide.h  norm.cpp  norm.h
Misc/RateLimiter/: CMakeLists.txt  RateLimiter.hpp
Modules/CPULoad/: CMakeLists.txt  CPULoad.cpp  CPULoad.h  CPULoad.hpp  FreeRTOS_Definitions.h  freertos.c
Modules/Debug/: CMakeLists.txt  Debug.cpp  Debug.h
Periphirals/STM32F4/IO/: CMakeLists.txt  IO.cpp  IO.h  IO.hpp
Periphirals/STM32G4/CANBus/: CANBus.cpp  CANBus.h  CANBus.hpp  CMakeLists.txt
Periphirals/STM32G4/IO/: CMakeLists.txt  IO.cpp  IO.hpp
Periphirals/STM32G4/InputCapture/: CMakeLists.txt  InputCapture.cpp  InputCapture.h  InputCapture.hpp
Periphirals/STM32G4/PrecisionSysTick/: CMakeLists.txt  PrecisionSysTick.c  PrecisionSysTick.h
Periphirals/STM32G4/SyncedPWMADC/: CMakeLists.txt  SyncedPWMADC.cpp  SyncedPWMADC.h  SyncedPWMADC.hpp  SyncedPWMADC_ADC.cpp  SyncedPWMADC_Config.h  SyncedPWMADC_Config.hpp  SyncedPWMADC_Timer.cpp
Periphirals/STM32G4/UART/: CMakeLists.txt  UART.cpp  UART.h  UART.hpp
Periphirals/STM32H7/ADC/: ADC.cpp  ADC.h  ADC.hpp  CMakeLists.txt
Periphirals/STM32H7/EEPROM/: CMakeLists.txt  EEPROM.cpp  EEPROM.h  EEPROM.hpp
Periphirals/STM32H7/Encoder/: CMakeLists.txt  Encoder.cpp  Encoder.h  Encoder.hpp
Periphirals/STM32H7/IO/: CMakeLists.txt  IO.cpp  IO.h  IO.hpp
Periphirals/STM32H7/PrecisionSysTick/: CMakeLists.txt  stm32h7xx_hal_timebase_tim.c  stm32h7xx_hal_timebase_tim.h
Periphirals/STM32H7/UART/: CMakeLists.txt  UART.cpp  UART.h  UART.hpp
Periphirals/STM32H7/USBCDC/: CMakeLists.txt  USBCDC.cpp  USBCDC.h  USBCDC.hpp  usbd_cdc_if.c  usbd_cdc_if.h  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h
Periphirals/STM32H7/USBCDC/STM32_USB_Device_Library/Class/CDC/Inc/: usbd_cdc.h
Periphirals/STM32H7/USBCDC/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c  usbd_cdc_if_template.c
Periphirals/STM32H7/USBCDC/STM32_USB_Device_Library/Core/Inc/: usbd_core.h  usbd_def.h
Periphirals/STM32H7/USBCDC/STM32_USB_Device_Library/Core/Src/: usbd_conf_template.c  usbd_core.c  usbd_ctlreq.c  usbd_ioreq.c
Periphirals/STM32H7/Watchdog/: CMakeLists.txt  Watchdog.cpp  Watchdog.hpp
Templates/: FreeRTOSConfig.h  Priorities.h
(+169 files in other folders)
